mobile layout issues

--- a/src/components/Calender/Calender.scss
+++ b/src/components/Calender/Calender.scss
@@ -1,18 +1,20 @@
 @import '../../variables.scss';
- 
+
 .CalenderContainer {
   width: 97%;
   margin: 25px auto;
 }
 
-.rbc-month-view, .rbc-time-view{
+.rbc-month-view,
+.rbc-time-view {
   border-radius: 3px;
 }
 
-.rbc-toolbar span button{
+.rbc-toolbar span button {
   color: $color-font-offwhite;
 }
-.rbc-calendar{
+
+.rbc-calendar {
   color: $color-font-offwhite;
 }
 
@@ -30,7 +32,8 @@
   color: $color-font-offwhite;
 }
 
-.rbc-month-header, .rbc-time-header-content {
+.rbc-month-header,
+.rbc-time-header-content {
   background-color: $color-bg-main4;
 }
 
@@ -49,7 +52,8 @@
   border-left: 1px solid $color-bg-main5 !important;
 }
 
-.rbc-day-bg, .rbc-time-header-gutter {
+.rbc-day-bg,
+.rbc-time-header-gutter {
   background-color: $color-bg-main3;
   color: $color-font-offwhite;
 }
@@ -67,7 +71,7 @@
 }
 
 .rbc-toolbar button.rbc-active {
-  color:$color-font-normal;
+  color: $color-font-normal;
 }
 
 .rbc-off-range-bg {
@@ -78,7 +82,7 @@
   background-color: $color-bg-main3 !important;
 }
 
-.rbc-time-column{
+.rbc-time-column {
   background-color: $color-bg-main3 !important;
 }
 
