--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-end;
+  margin-top: 2rem;
   margin-right: 0;
   width: 100%;
 
@@ -69,8 +70,9 @@ select {
 @media screen and (min-width: 800px) {
   .filter {
     display: flex;
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
+    margin-top: 3rem;
     flex-direction: row;
     align-items: flex-end;
     justify-content: center;
@@ -91,5 +93,11 @@ select {
     > div {
       width: auto;
     }
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .filter {
+    width: 70%;
   }
 }
