--- a/src/components/TaskForm/TaskForm.scss
+++ b/src/components/TaskForm/TaskForm.scss
@@ -38,9 +38,9 @@
 .dateInput {
   -webkit-align-items: center;
   font-family: $font-Family-normal;
-  width: auto;
+  width: 100%;
   overflow: hidden;
-  padding: 10px;
+  padding: 8px;
   -webkit-padding-start: 1px;
   margin-bottom: 1.2rem;
 }
